--- a/src/Vistas/frmiAgregarPatrocinio.form
+++ b/src/Vistas/frmiAgregarPatrocinio.form
@@ -4,6 +4,8 @@
   <NonVisualComponents>
     <Component class="com.toedter.calendar.JCalendar" name="jCalendar1">
     </Component>
+    <Component class="com.toedter.calendar.JDateChooser" name="jDateChooser1">
+    </Component>
   </NonVisualComponents>
   <Properties>
     <Property name="closable" type="boolean" value="true"/>
@@ -217,8 +219,14 @@
       </Events>
     </Component>
     <Component class="com.toedter.calendar.JDateChooser" name="jcFin">
+      <Properties>
+        <Property name="dateFormatString" type="java.lang.String" value="yyyy-MM-dd"/>
+      </Properties>
     </Component>
     <Component class="com.toedter.calendar.JDateChooser" name="jcInicio">
+      <Properties>
+        <Property name="dateFormatString" type="java.lang.String" value="yyyy-MM-dd"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
